--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,15 @@ node_modules/
 
 # Environment Variables
 .env
+.env.*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Environment files in all apps
+apps/**/.env
+apps/**/.env.*
 
 # Logs
 logs
