--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "ioredis": "^5.7.0",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
@@ -43,7 +44,8 @@
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.25",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
