--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-socket.io": "^11.1.6",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.6",
+    "@supabase/supabase-js": "^2.58.0",
     "@types/bcrypt": "^6.0.0",
     "@types/socket.io-client": "^1.4.36",
     "bcrypt": "^6.0.0",
@@ -37,8 +38,8 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "ioredis": "^5.7.0",
     "dotenv": "^17.2.2",
+    "ioredis": "^5.7.0",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
