--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -32,14 +32,14 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
           for file in docker/*.Dockerfile; do
-            SERVICE_NAME=$(basename $file .Dockerfile)
+            SERVICE_NAME=$(basename "$file" .Dockerfile)
             ECR_REPO="learni/$SERVICE_NAME"
             echo "🚀 Building and pushing $SERVICE_NAME"
 
-            docker build -t $ECR_REGISTRY/$ECR_REPO:${{ env.IMAGE_TAG }} -f $file .
-            docker push $ECR_REGISTRY/$ECR_REPO:${{ env.IMAGE_TAG }}
+            docker build -t "$ECR_REGISTRY/$ECR_REPO:${{ env.IMAGE_TAG }}" -f "$file" .
+            docker push "$ECR_REGISTRY/$ECR_REPO:${{ env.IMAGE_TAG }}"
 
-            docker tag $ECR_REGISTRY/$ECR_REPO:${{ env.IMAGE_TAG }} \
-                       $ECR_REGISTRY/$ECR_REPO:latest
-            docker push $ECR_REGISTRY/$ECR_REPO:latest
-          done
+            docker tag "$ECR_REGISTRY/$ECR_REPO:${{ env.IMAGE_TAG }}" \
+                       "$ECR_REGISTRY/$ECR_REPO:latest"
+            docker push "$ECR_REGISTRY/$ECR_REPO:latest"
+          done
