--- a/.github/workflows/host-on-EC2.yml
+++ b/.github/workflows/host-on-EC2.yml
@@ -59,7 +59,7 @@ jobs:
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
-
+  
       - name: Deploy to EC2
         env:
           EC2_USER: ${{ secrets.EC2_USERNAME }}
@@ -67,8 +67,9 @@ jobs:
           ECR_REGISTRY: ${{ needs.build-and-push.outputs.ECR_REGISTRY }}
         run: |
           echo "🚀 Pulling latest Docker images and restarting containers..."
-          ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_IP << 'EOF'
+          ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << EOF
             aws ecr get-login-password --region eu-north-1 | docker login --username AWS --password-stdin 980104892293.dkr.ecr.eu-north-1.amazonaws.com
             docker-compose pull
             docker-compose up -d
           EOF
+
